--- a/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
@@ -3,7 +3,7 @@
   <section class="container-content" list="getTasksArray('all')" list-recent
     list-options="{hideItemDefault: true}">
 
-    <div ng-if="isFeatureActive('tasks') && isContentVisible('tasks', 'all')">
+    <div ng-show="isContentVisible('tasks', 'all')">
       <div class="group-mixed heading">
         <div class="group-mixed--middle">
           <h2 class="group-heading justified">all tasks</h2>
