Animate bounce only once, change tutorial text

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -606,11 +606,8 @@
       <h2 class="group-heading instruction row">
         <span>tutorial <span class="highlighted">complete</span>!</span>
       </h2>
-      <div class="textgroup-ingress row">
-        <span>to back up your data
-          <a href class="highlighted" ng-click="completeOnboarding('user')"><span>sign up</span></a>
-          now for a free account
-        </span>
+      <div class="textgroup-ingress row">play, search and explore,
+        <span class="text-highlighted">extended mind</span> is yours
       </div>
     </div>
 
