Onboarding fixed here and there

--- a/frontend/core/src/main/webapp/static/app/base/listFooter.html
+++ b/frontend/core/src/main/webapp/static/app/base/listFooter.html
@@ -9,7 +9,7 @@
   </a>
 
   <div class="group-symmetrical--middle">
-    <a href ng-hide="isFooterAddItemHidden()" swiper-click="addItem()">
+    <a href swiper-click="addItem()">
       <span class="icon-plus"></span>
     </a>
   </div>
