--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -29,7 +29,7 @@
       </a>
     </div>
     <div list-prompt list-prompt-infos="listInfos"
-      list-prompt-hide="[listItemAddActive, onboardingInProgress]"></div>
+      list-prompt-hide="[listItemAddActive]"></div>
   </section>
   <footer ng-show="isContentVisible('inbox')" class="container-content--after" list-footer="getFeatureMap('inbox')"></footer>
 
