--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItemAdd.html
@@ -22,7 +22,7 @@
 </form>
 
 <!-- ONBOARDING -->
-<div ng-if="isOnboardingInProgress()" class="group-instruction-input">
+<div ng-if="isTutorialInProgress()" class="group-instruction-input">
   <div ng-show="!newItem.trans.title || newItem.trans.title.length === 0" class="text-details row">
     e.g. call mom, email boss, buy milk
   </div>
