--- a/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
@@ -17,7 +17,7 @@
         list-item ng-include="urlBase + 'app/tasks/taskListItem.html'">
       </div>
       <div list-prompt="tasks" list-prompt-infos="listInfos"
-        list-prompt-hide="[listItemAddActive, onboardingInProgress]"></div>
+        list-prompt-hide="[listItemAddActive]"></div>
     </div>
 
     <!-- ONBOARDING -->
