--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -345,7 +345,7 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
-              list-prompt-hide="[listItemAddActive, isTutorialInProgress(), daySlidesInfosCleared]">
+              list-prompt-hide="[listItemAddActive, daySlidesInfosCleared]">
             </div>
 
             <a href ng-if="isAgendaVisible() && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
@@ -395,7 +395,7 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
-              list-prompt-hide="[listItemAddActive, isTutorialInProgress(), daySlidesInfosCleared]">
+              list-prompt-hide="[listItemAddActive, daySlidesInfosCleared]">
             </div>
 
             <a href ng-if="isAgendaVisible() && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
@@ -445,7 +445,7 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
-              list-prompt-hide="[listItemAddActive, isTutorialInProgress(), daySlidesInfosCleared]">
+              list-prompt-hide="[listItemAddActive, daySlidesInfosCleared]">
             </div>
 
             <a href ng-if="isAgendaVisible() && daySlides[1].info !== null" ng-hide="daySlidesInfosCleared"
@@ -495,7 +495,7 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
-              list-prompt-hide="[listItemAddActive, isTutorialInProgress(), daySlidesInfosCleared]">
+              list-prompt-hide="[listItemAddActive, daySlidesInfosCleared]">
             </div>
 
             <a href ng-if="isAgendaVisible() && daySlides[2].info !== null" ng-hide="daySlidesInfosCleared"
@@ -545,7 +545,7 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-load-more="isAgendaVisible()"
               list-prompt-hide-load="daySlidesInfosCleared" list-prompt-load-more-fn="addMoreItems()"
-              list-prompt-hide="[listItemAddActive, isTutorialInProgress(), daySlidesInfosCleared]">
+              list-prompt-hide="[listItemAddActive, daySlidesInfosCleared]">
             </div>
 
             <a href ng-if="isAgendaVisible() && daySlides[0].info !== null" ng-hide="daySlidesInfosCleared"
@@ -579,7 +579,7 @@
   </section>
 
   <!-- ONBOARDING -->
-  <section ng-if="isOnboarding('focus', 'tasks')" ng-hide="isContentVisible('focus', 'tasks')" class="container-content">
+  <section ng-if="isTutorialInProgress()" ng-hide="isContentVisible('focus', 'tasks')" class="container-content">
 
     <!-- PHASE 1 -->
     <div ng-if="getOnboardingPhase('focus', 'tasks') === 1" class="group-instruction">
@@ -613,7 +613,7 @@
 
   </section>
 
-  <footer ng-if="isOnboarding('focus', 'tasks')" class="container-content--after group-btn onboarding">
+  <footer ng-if="isTutorialInProgress()" class="container-content--after group-btn onboarding">
     <button type="submit" ng-if="getOnboardingPhase('focus', 'tasks') === 3" class="btn-action"
       ng-click="openCalendarSettingsAndIncreaseOnboarding()">
       <span class="text-btn">set up calendars</span>
@@ -625,8 +625,9 @@
   </footer>
 
   <footer class="container-content--after"
-    ng-show="isContentVisible('focus', 'tasks') ||
-             getOnboardingPhase('focus', 'tasks') === 1"
+    ng-if="isFeatureActive('focus') &&
+           ((isContentVisible('focus', 'tasks') && getOnboardingPhase('focus', 'tasks') !== 2) ||
+             getOnboardingPhase('focus', 'tasks') === 1)"
     list-footer="getFeatureMap('focus')" list-footer-subfeature="tasks"
     ng-class="getOnboardingPhase('focus', 'tasks') === 1 && 'onboarding'">
   </footer>
