--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -1,10 +1,10 @@
 <div class="group-mixed vertically-centered">
   <div class="group-mixed--left">
-    <a href class="onboarding-link-disable" swiper-click="changeFeature('list', list, true)">
+    <a href swiper-click="changeFeature('list', list, true)">
       <span class="text-navigation-back large"></span>
     </a>
   </div>
-  <a href class="group-mixed--middle link-list-item onboarding-link-disable"
+  <a href class="group-mixed--middle link-list-item"
     swiper-click="changeFeature('list', list, true)">
     <span class="text-link" clamp=2 ng-bind="list.trans.title"></span>
   </a>
