--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -62,12 +62,14 @@
     <div class="container-menu--push"></div>
   </div>
   <div class="container-menu--bottom">
-    <a href class="link-menu row onboarding-hide" ng-click="gotoFeature('trash')"
+    <a href class="link-menu row" ng-click="gotoFeature('trash')"
       ng-class="isFeatureActive('trash') ? 'highlighted' : 'downplayed'">
       <span class="text-navigation-menu-small">trash</span>
     </a>
-    <a href class="link-menu row onboarding-hide" ng-click="gotoFeature('settings')"
-      ng-class="isFeatureActive('settings') ? 'highlighted' : 'downplayed'">
+    <a href class="link-menu row" ng-click="gotoFeature('settings')"
+      ng-class="{'highlighted': isFeatureActive('settings'),
+                 'downplayed': !isFeatureActive('settings'),
+                 'onboarding': isOnboarding('settings')}"
       <span class="text-navigation-menu-small">settings</span>
     </a>
   </div>
