--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -69,7 +69,7 @@
     <a href class="link-menu row" ng-click="gotoFeature('settings')"
       ng-class="{'highlighted': isFeatureActive('settings'),
                  'downplayed': !isFeatureActive('settings'),
-                 'onboarding': isOnboarding('settings')}"
+                 'onboarding': isOnboarding('settings')}">
       <span class="text-navigation-menu-small">settings</span>
     </a>
   </div>
