Added onboarding to context editor open

--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -4,7 +4,8 @@
     <div class="group-mixed heading vertically-centered">
       <div class="group-mixed--middle">
         <h2 class="group-heading justified">
-          <a href ng-if="context" class="link" swiper-click="openEditor('tag', context)">
+          <a href ng-if="context" class="link" swiper-click="openContextEditor(context)"
+          ng-class="isOnboarding('tasks', 'context') && 'onboarding'">
             <span class="text-heading" ng-bind="'@' + context.trans.title"
               ng-class="context.trans.title.length > 6 && 'long'" clamp=2></span>
           </a>
