--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed with-checkbox" ng-if="showArchiveFeature()">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.archive" ng-true-value="true"
           icon-checkbox="'archive'" ng-click="featureCheckboxClicked('archive')"/>
