Fixed a typo in app store logo filename in download page.

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -121,7 +121,7 @@
     <div class="table row">
       <div class="table-row" style="vertical-align: middle;">
         <a class="table-cell" style="text-align: left;" href="itms://itunes.com/apps/extendedmind">
-          <img ng-src="/{{urlBase}}img/download-app-keep@2x.png" style="width: 120px;"/><br/>
+          <img ng-src="/{{urlBase}}img/download-app-store@2x.png" style="width: 120px;"/><br/>
           <span class="text-details" style="padding-left: 10px;">iphone 4s or later</span>
         </a>
         <a class="table-cell" style="text-align: right;" href="market://details?id=org.extendedmind">
