--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -112,12 +112,22 @@
         </a>
       </li>
     </ul>
-    <h2 class="group-heading instruction row" style="padding-top: 15vh;">
+
+    <h2 ng-if="mobilePlatform" class="group-heading instruction row" style="padding-top: 15vh;">
       download<br/>
       the <span class="text-highlighted">app</span>
     </h2>
+
+    <h2 ng-if="!mobilePlatform" class="group-heading instruction row" style="padding-top: 15vh;">
+      unsupported<br/>
+      <span class="text-highlighted">browser</span>
+    </h2>
+    <div class="textgroup-ingress row">currently only the
+      <span class="text-highlighted">google chrome</span> browser is supported
+    </div>
+
   </section>
-  <footer class="container-content--after" style="height: 122px;">
+  <footer ng-if="mobilePlatform" class="container-content--after" style="height: 122px;">
     <div class="table row">
       <div class="table-row" style="vertical-align: middle;">
         <a class="table-cell" style="text-align: left;" href="itms://itunes.com/apps/extendedmind">
